Integrate Google Analytics into index.html
Added Google Analytics tracking script to the head section.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,15 @@
   <meta property="og:description" content="for aktu students">
   <meta name="twitter:description" content="for aktu students">
   <link rel="icon" type="image/x-icon" href="https://storage.googleapis.com/gpt-engineer-file-uploads/E2wJJKwoIahmtM8IeVQcNKGEMyj2/uploads/1766424223636-Dr._A.P.J._Abdul_Kalam_Technical_University_logo.png">
-</head>
+<!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XJVD5EGZCE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-XJVD5EGZCE');
+</script>
+  </head>
 
   <body>
     <div id="root"></div>
